--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  
+  "engines": {
+    "node": "22.16.0"
+  },
   "name": "pairban",
   "version": "1.0.0",
   "main": "index.js",
@@ -13,6 +17,7 @@
     "axios": "^1.12.2",
     "cloudinary": "^1.41.3",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.2",
     "ejs": "^3.1.10",
